--- a/templates/snippet/navbar.html
+++ b/templates/snippet/navbar.html
@@ -38,7 +38,7 @@
       <!-- Logo -->
       <a
         class="mb-4 ml-2 mr-5 mt-3 flex items-center text-neutral-900 hover:text-neutral-900 focus:text-neutral-900 dark:text-neutral-200 dark:hover:text-neutral-400 dark:focus:text-neutral-400 lg:mb-0 lg:mt-0"
-        href="#">
+        href={% url "product" %}>
         <img
           src="https://tecdn.b-cdn.net/img/logo/te-transparent-noshadows.webp"
           style="height: 15px"
